--- a/config/config.env
+++ b/config/config.env
@@ -1,8 +1,8 @@
 
 
-MONGO_URI=mongodb+srv://ren123:ren123@code4share-img99.mongodb.net/code4share
+MONGO_URI=process.env.MONGO_URI
 
-SESSION_SECRET_KEY=sadsadasrrevea432xc
+SESSION_SECRET_KEY=process.env.SESSION_SECRET_KEY
 
 SMTP_HOST=smtp.mailtrap.io
 SMTP_PORT=2525
